--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@
 
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__block/header__block.css');
+@import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/header/__signout/header__signout.css');
 
 
 /* section profile */
@@ -80,6 +83,9 @@
 @import url('./blocks/pop-up/__span-error/pop-up__span-error.css');
 @import url('./blocks/pop-up/__block/pop-up__block.css');
 @import url('./blocks/pop-up/_opened/pop-up_opened.css');
+@import url('./blocks/pop-up/__tooltip/pop-up__tooltip.css');
+@import url('./blocks/pop-up/__tooltip-img/pop-up__tooltip-img.css');
+@import url('./blocks/pop-up/__tooltip-title/pop-up__tooltip-title.css');
 
 /* full img */
 
@@ -88,3 +94,12 @@
 @import url('./blocks/pop-up/__card-full-img/pop-up__card-full-img.css');
 @import url('./blocks/pop-up/__card-full-title/pop-up__card-full-title.css');
 @import url('./blocks/pop-up/__full-cards/pop-up__full-cards.css');
+
+/* auth */
+
+@import url('./blocks/auth/__block/auth__block.css');
+@import url('./blocks/auth/__button/auth__button.css');
+@import url('./blocks/auth/__title/auth__title.css');
+@import url('./blocks/auth/__form/auth__form.css');
+@import url('./blocks/auth/__input/auth__input.css');
+@import url('./blocks/auth/__switch/auth__switch.css');
