--- a/src/blocks/header/__block/header__block.css
+++ b/src/blocks/header/__block/header__block.css
@@ -2,6 +2,9 @@
   width: 83.125%;
   margin: 0 auto;
   padding: 28px 0 27.6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
